--- a/index.html
+++ b/index.html
@@ -118,6 +118,11 @@
             <div class="w-12 h-12 bg-fuchsia-500 text-white rounded-xl flex items-center justify-center flex-shrink-0"><svg class="w-8 h-8" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><circle cx="6.5" cy="6.5" r="2.5" /><circle cx="17.5" cy="17.5" r="2.5" /><line x1="19" y1="5" x2="5" y2="19" /></svg></div>
             <span class="text-sm font-medium ml-4 pr-8">Калькулятор процентных соотношений</span>
         </a>
+        <a href="?app=discountCalculator" class="app-item relative flex flex-row items-center text-left p-3 rounded-xl transition-all group shadow-lg hover:shadow-xl hover:scale-105 bg-white dark:bg-gray-800 w-full" data-name="Калькулятор скидок" data-module="discountCalculator">
+            <button class="pin-btn" aria-label="Закрепить/открепить приложение"><svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><polygon class="pin-icon-poly" points="2.77 20.53 8.78 13.81 10.19 15.22 3.47 21.23 2.77 20.53 2.77 20.53"/><path class="pin-icon-path" d="M13.73,18.76,5.24,10.27A5.94,5.94,0,0,1,9.48,8.52,5.42,5.42,0,0,1,11,8.73L14.5,5.26a1.49,1.49,0,0,1,2-2,1.32,1.32,0,0,1,.42.29l3.53,3.53a1.32,1.32,0,0,1,.29.42,1.49,1.49,0,0,1-2,2L15.27,13a5.42,5.42,0,0,1,.21,1.55A5.94,5.94,0,0,1,13.73,18.76Z"/></svg></button>
+            <div class="w-12 h-12 bg-red-500 text-white rounded-xl flex items-center justify-center flex-shrink-0"><svg class="w-8 h-8" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M20.59 13.41l-7.17 7.17a2 2 0 01-2.83 0L2 12V2h10l8.59 8.59a2 2 0 010 2.82z"></path><line x1="7" y1="7" x2="7.01" y2="7"></line></svg></div>
+            <span class="text-sm font-medium ml-4 pr-8">Калькулятор скидок</span>
+        </a>
         <a href="?app=timer" class="app-item relative flex flex-row items-center text-left p-3 rounded-xl transition-all group shadow-lg hover:shadow-xl hover:scale-105 bg-white dark:bg-gray-800 w-full" data-name="Таймер" data-module="timer">
             <button class="pin-btn" aria-label="Закрепить/открепить приложение"><svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><polygon class="pin-icon-poly" points="2.77 20.53 8.78 13.81 10.19 15.22 3.47 21.23 2.77 20.53 2.77 20.53"/><path class="pin-icon-path" d="M13.73,18.76,5.24,10.27A5.94,5.94,0,0,1,9.48,8.52,5.42,5.42,0,0,1,11,8.73L14.5,5.26a1.49,1.49,0,0,1,2-2,1.32,1.32,0,0,1,.42.29l3.53,3.53a1.32,1.32,0,0,1,.29.42,1.49,1.49,0,0,1-2,2L15.27,13a5.42,5.42,0,0,1,.21,1.55A5.94,5.94,0,0,1,13.73,18.76Z"/></svg></button>
             <div class="w-12 h-12 bg-orange-400 text-white rounded-xl flex items-center justify-center flex-shrink-0"><svg class="w-8 h-8" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="9" /><line x1="12" y1="2" x2="12" y2="5" /><line x1="12" y1="12" x2="12" y2="7" /><line x1="12" y1="12" x2="15" y2="12" /></svg></div>
@@ -146,6 +151,18 @@
                 </svg>
             </div>
             <span class="text-sm font-medium ml-4 pr-8">Сапер</span>
+        </a>
+        <a href="?app=game2048" class="app-item relative flex flex-row items-center text-left p-3 rounded-xl transition-all group shadow-lg hover:shadow-xl hover:scale-105 bg-white dark:bg-gray-800 w-full" data-name="Игра '2048'" data-module="game2048">
+            <button class="pin-btn" aria-label="Закрепить/открепить приложение"><svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><polygon class="pin-icon-poly" points="2.77 20.53 8.78 13.81 10.19 15.22 3.47 21.23 2.77 20.53 2.77 20.53"/><path class="pin-icon-path" d="M13.73,18.76,5.24,10.27A5.94,5.94,0,0,1,9.48,8.52,5.42,5.42,0,0,1,11,8.73L14.5,5.26a1.49,1.49,0,0,1,2-2,1.32,1.32,0,0,1,.42.29l3.53,3.53a1.32,1.32,0,0,1,.29.42,1.49,1.49,0,0,1-2,2L15.27,13a5.42,5.42,0,0,1,.21,1.55A5.94,5.94,0,0,1,13.73,18.76Z"/></svg></button>
+            <div class="w-12 h-12 bg-amber-400 text-white rounded-xl flex items-center justify-center flex-shrink-0 p-1">
+                <svg class="w-full h-full" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" xmlns="http://www.w3.org/2000/svg">
+                    <rect x="3" y="3" width="18" height="18" rx="2"></rect>
+                    <path d="M7 15.5V8.5C7 7.67157 7.67157 7 8.5 7H10.5C11.3284 7 12 7.67157 12 8.5V15.5C12 16.3284 11.3284 17 10.5 17H8.5C7.67157 17 7 16.3284 7 15.5Z"></path>
+                    <path d="M10 12H9"></path>
+                    <path d="M15 15.5V8.5C15 7.67157 15.6716 7 16.5 7H18"></path>
+                </svg>
+            </div>
+            <span class="text-sm font-medium ml-4 pr-8">Игра "2048"</span>
         </a>
         <a href="?app=stopwatch" class="app-item relative flex flex-row items-center text-left p-3 rounded-xl transition-all group shadow-lg hover:shadow-xl hover:scale-105 bg-white dark:bg-gray-800 w-full" data-name="Секундомер" data-module="stopwatch">
             <button class="pin-btn" aria-label="Закрепить/открепить приложение"><svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><polygon class="pin-icon-poly" points="2.77 20.53 8.78 13.81 10.19 15.22 3.47 21.23 2.77 20.53 2.77 20.53"/><path class="pin-icon-path" d="M13.73,18.76,5.24,10.27A5.94,5.94,0,0,1,9.48,8.52,5.42,5.42,0,0,1,11,8.73L14.5,5.26a1.49,1.49,0,0,1,2-2,1.32,1.32,0,0,1,.42.29l3.53,3.53a1.32,1.32,0,0,1,.29.42,1.49,1.49,0,0,1-2,2L15.27,13a5.42,5.42,0,0,1,.21,1.55A5.94,5.94,0,0,1,13.73,18.76Z"/></svg></button>
@@ -228,6 +245,11 @@
             <div class="w-12 h-12 bg-orange-500 text-white rounded-xl flex items-center justify-center flex-shrink-0"><svg class="w-8 h-8" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><rect x="3" y="3" width="18" height="18" rx="2" ry="2"></rect><circle cx="8.5" cy="8.5" r="1.5"></circle><polyline points="21 15 16 10 5 21"></polyline></svg></div>
             <span class="text-sm font-medium ml-4 pr-8">Конвертер форматов изображений</span>
         </a>
+        <a href="?app=photoEditor" class="app-item relative flex flex-row items-center text-left p-3 rounded-xl transition-all group shadow-lg hover:shadow-xl hover:scale-105 bg-white dark:bg-gray-800 w-full" data-name="Простой фоторедактор" data-module="photoEditor">
+            <button class="pin-btn" aria-label="Закрепить/открепить приложение"><svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><polygon class="pin-icon-poly" points="2.77 20.53 8.78 13.81 10.19 15.22 3.47 21.23 2.77 20.53 2.77 20.53"/><path class="pin-icon-path" d="M13.73,18.76,5.24,10.27A5.94,5.94,0,0,1,9.48,8.52,5.42,5.42,0,0,1,11,8.73L14.5,5.26a1.49,1.49,0,0,1,2-2,1.32,1.32,0,0,1,.42.29l3.53,3.53a1.32,1.32,0,0,1,.29.42,1.49,1.49,0,0,1-2,2L15.27,13a5.42,5.42,0,0,1,.21,1.55A5.94,5.94,0,0,1,13.73,18.76Z"/></svg></button>
+            <div class="w-12 h-12 bg-violet-500 text-white rounded-xl flex items-center justify-center flex-shrink-0"><svg class="w-8 h-8" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M12 2L9 9l-7 2.5 7 2.5 3 7.5 3-7.5 7-2.5-7-2.5L12 2z"></path><path d="M22 12l-3 1.5 3 1.5-1.5 3 1.5 3-3-1.5-3 1.5 1.5-3-1.5-3 3-1.5z"></path></svg></div>
+            <span class="text-sm font-medium ml-4 pr-8">Простой фоторедактор</span>
+        </a>
         <a href="?app=colorConverter" class="app-item relative flex flex-row items-center text-left p-3 rounded-xl transition-all group shadow-lg hover:shadow-xl hover:scale-105 bg-white dark:bg-gray-800 w-full" data-name="Конвертер цветов" data-module="colorConverter">
             <button class="pin-btn" aria-label="Закрепить/открепить приложение"><svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><polygon class="pin-icon-poly" points="2.77 20.53 8.78 13.81 10.19 15.22 3.47 21.23 2.77 20.53 2.77 20.53"/><path class="pin-icon-path" d="M13.73,18.76,5.24,10.27A5.94,5.94,0,0,1,9.48,8.52,5.42,5.42,0,0,1,11,8.73L14.5,5.26a1.49,1.49,0,0,1,2-2,1.32,1.32,0,0,1,.42.29l3.53,3.53a1.32,1.32,0,0,1,.29.42,1.49,1.49,0,0,1-2,2L15.27,13a5.42,5.42,0,0,1,.21,1.55A5.94,5.94,0,0,1,13.73,18.76Z"/></svg></button>
             <div class="w-12 h-12 bg-purple-500 text-white rounded-xl flex items-center justify-center flex-shrink-0"><svg class="w-8 h-8" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M12 2.69l5.66 5.66a8 8 0 1 1-11.32 0L12 2.69z"></path><circle cx="12" cy="12" r="3"></circle></svg></div>
@@ -292,6 +314,11 @@
                 </svg>
             </div>
             <span class="text-sm font-medium ml-4 pr-8">Змейка</span>
+        </a>
+        <a href="?app=jsonFormatter" class="app-item relative flex flex-row items-center text-left p-3 rounded-xl transition-all group shadow-lg hover:shadow-xl hover:scale-105 bg-white dark:bg-gray-800 w-full" data-name="Форматирование JSON/XML" data-module="jsonFormatter">
+            <button class="pin-btn" aria-label="Закрепить/открепить приложение"><svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><polygon class="pin-icon-poly" points="2.77 20.53 8.78 13.81 10.19 15.22 3.47 21.23 2.77 20.53 2.77 20.53"/><path class="pin-icon-path" d="M13.73,18.76,5.24,10.27A5.94,5.94,0,0,1,9.48,8.52,5.42,5.42,0,0,1,11,8.73L14.5,5.26a1.49,1.49,0,0,1,2-2,1.32,1.32,0,0,1,.42.29l3.53,3.53a1.32,1.32,0,0,1,.29.42,1.49,1.49,0,0,1-2,2L15.27,13a5.42,5.42,0,0,1,.21,1.55A5.94,5.94,0,0,1,13.73,18.76Z"/></svg></button>
+            <div class="w-12 h-12 bg-slate-500 text-white rounded-xl flex items-center justify-center flex-shrink-0"><svg class="w-8 h-8" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><polyline points="16 18 22 12 16 6"></polyline><polyline points="8 6 2 12 8 18"></polyline></svg></div>
+            <span class="text-sm font-medium ml-4 pr-8">Форматирование JSON/XML</span>
         </a>
     </template>
 </body>
