--- a/index.html
+++ b/index.html
@@ -396,6 +396,46 @@
             </div>
             <span class="text-sm font-medium ml-4 pr-8">Судоку</span>
         </a>
+        <a href="?app=zipArchiver" class="app-item relative flex flex-row items-center text-left p-3 rounded-xl transition-all group shadow-lg hover:shadow-xl hover:scale-105 bg-white dark:bg-gray-800 w-full" data-name="Архиватор файлов (ZIP)" data-module="zipArchiver">
+            <button class="pin-btn" aria-label="Закрепить/открепить приложение">
+                <img src="img/pin.svg" class="w-3.5 h-3.5 unpinned-icon" alt="Закрепить">
+                <img src="img/pin2.svg" class="w-3.5 h-3.5 pinned-icon hidden filter-blue" alt="Открепить">
+            </button>
+            <div class="w-12 h-12 bg-yellow-500 text-white rounded-xl flex items-center justify-center p-2 flex-shrink-0">
+                <img src="img/zipArchiver.svg" class="w-full h-full filter brightness-0 invert" alt="Архиватор файлов (ZIP)">
+            </div>
+            <span class="text-sm font-medium ml-4 pr-8">Архиватор файлов (ZIP)</span>
+        </a>
+        <a href="?app=game2048" class="app-item relative flex flex-row items-center text-left p-3 rounded-xl transition-all group shadow-lg hover:shadow-xl hover:scale-105 bg-white dark:bg-gray-800 w-full" data-name="2048" data-module="game2048">
+            <button class="pin-btn" aria-label="Закрепить/открепить приложение">
+                <img src="img/pin.svg" class="w-3.5 h-3.5 unpinned-icon" alt="Закрепить">
+                <img src="img/pin2.svg" class="w-3.5 h-3.5 pinned-icon hidden filter-blue" alt="Открепить">
+            </button>
+            <div class="w-12 h-12 bg-orange-400 text-white rounded-xl flex items-center justify-center p-2 flex-shrink-0">
+                <img src="img/game2048.svg" class="w-full h-full filter brightness-0 invert" alt="2048">
+            </div>
+            <span class="text-sm font-medium ml-4 pr-8">2048</span>
+        </a>
+        <a href="?app=barcodeGenerator" class="app-item relative flex flex-row items-center text-left p-3 rounded-xl transition-all group shadow-lg hover:shadow-xl hover:scale-105 bg-white dark:bg-gray-800 w-full" data-name="Генератор штрих-кодов" data-module="barcodeGenerator">
+            <button class="pin-btn" aria-label="Закрепить/открепить приложение">
+                <img src="img/pin.svg" class="w-3.5 h-3.5 unpinned-icon" alt="Закрепить">
+                <img src="img/pin2.svg" class="w-3.5 h-3.5 pinned-icon hidden filter-blue" alt="Открепить">
+            </button>
+            <div class="w-12 h-12 bg-gray-600 text-white rounded-xl flex items-center justify-center p-2 flex-shrink-0">
+                <img src="img/barcodeGenerator.svg" class="w-full h-full filter brightness-0 invert" alt="Генератор штрих-кодов">
+            </div>
+            <span class="text-sm font-medium ml-4 pr-8">Генератор штрих-кодов</span>
+        </a>
+        <a href="?app=voiceRecorder" class="app-item relative flex flex-row items-center text-left p-3 rounded-xl transition-all group shadow-lg hover:shadow-xl hover:scale-105 bg-white dark:bg-gray-800 w-full" data-name="Диктофон" data-module="voiceRecorder">
+            <button class="pin-btn" aria-label="Закрепить/открепить приложение">
+                <img src="img/pin.svg" class="w-3.5 h-3.5 unpinned-icon" alt="Закрепить">
+                <img src="img/pin2.svg" class="w-3.5 h-3.5 pinned-icon hidden filter-blue" alt="Открепить">
+            </button>
+            <div class="w-12 h-12 bg-red-500 text-white rounded-xl flex items-center justify-center p-2 flex-shrink-0">
+                <img src="img/voiceRecorder.svg" class="w-full h-full filter brightness-0 invert" alt="Диктофон">
+            </div>
+            <span class="text-sm font-medium ml-4 pr-8">Диктофон</span>
+        </a>
     </template>
 </body>
 </html>
