--- a/index.html
+++ b/index.html
@@ -58,12 +58,12 @@
         /* --- НОВЫЙ ГРАДИЕНТНЫЙ ФОН --- */
         body {
             background-color: #e0eafc; /* Резервный цвет */
-            background-image: linear-gradient(135deg, #e0eafc 0%, #cfdef3 100%);
+            background-image: linear-gradient(135deg, #80fda8 0%, #97fd80 50%, #d5fd80 100%);
             transition: background-image 0.5s ease;
         }
         .dark body {
             background-color: #1e3a8a; /* Резервный цвет для темной темы */
-            background-image: linear-gradient(135deg, #111111 0%, #333333 100%);
+            background-image: linear-gradient(135deg, #111111 0%, ##FF7B00 50%, #333333 100%);
         }
     </style>
     
